@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-23T01:18:22Z",
-  "count_outdated" : 1645,
-  "uniques_outdated" : 1165,
+  "timestamp" : "2026-02-24T01:17:02Z",
+  "count_outdated" : 1646,
+  "uniques_outdated" : 1166,
   "count" : 1650,
   "uniques" : 1170,
   "clones" : [
-    {
-      "timestamp": "2026-02-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2026-02-09T00:00:00Z",
       "count": 0,
@@ -124,6 +115,15 @@
     },
     {
       "timestamp": "2026-02-21T00:00:00Z",
+      "count": 0,
+      "count_minmax": [ 0, 0 ],
+      "count_decinc": [ 0, 0 ],
+      "uniques": 0,
+      "uniques_minmax": [ 0, 0 ],
+      "uniques_decinc": [ 0, 0 ]
+    },
+    {
+      "timestamp": "2026-02-22T00:00:00Z",
       "count": 0,
       "count_minmax": [ 0, 0 ],
       "count_decinc": [ 0, 0 ],
