@@ -1,3 +1,12 @@
+2026-02-24T01:17:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22332350766 # 887
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-24
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 1165 1645 / 1170 1650
+* notice: next accum: outdated-unq outdated-all / unq all: 1166 1646 / 1170 1650
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-02-08] / []
+
 2026-02-23T01:18:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22289626364 # 886
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-23
